--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,57 @@
 @import "{{ site.theme }}";
 
 .ghp-hide { display: none }
+
+.ghp-haunted {
+    animation: text-shadow 1.5s ease-in-out infinite;
+    font-weight: 900;
+    line-height: 1;
+    display: inline-block
+}
+
+@keyframes text-shadow {
+    0% {  
+        transform: translateY(0);
+        text-shadow: 
+            0 0 0 #021481, 
+            0 0 0 #019293, 
+            0 0 0 #8b0213, 
+            0 0 0 #a3a100;
+    }
+
+    20% {  
+        transform: translateY(-1em);
+        text-shadow: 
+            0 0.125em 0 #021481, 
+            0 0.25em 0 #019293, 
+            0 -0.125em 0 #8b0213, 
+            0 -0.25em 0 #a3a100;
+    }
+
+    40% {  
+        transform: translateY(0.5em);
+        text-shadow: 
+            0 -0.0625em 0 #021481, 
+            0 -0.125em 0 #019293, 
+            0 0.0625em 0 #8b0213, 
+            0 0.125em 0 #a3a100;
+    }
+    
+   60% {
+        transform: translateY(-0.25em);
+        text-shadow: 
+            0 0.03125em 0 #021481, 
+            0 0.0625em 0 #019293, 
+            0 -0.03125em 0 #8b0213, 
+            0 -0.0625em 0 #a3a100;
+    }
+
+    80% {  
+        transform: translateY(0);
+        text-shadow: 
+            0 0 0 #021481, 
+            0 0 0 #019293, 
+            0 0 0 #8b0213, 
+            0 0 0 #a3a100;
+    }
+}
