--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@
     display: inline-block
 }
 @for $i from 1 to 10 {
-    .results div:nth-child(#{$i}) { animation-delay: $i * 0.1s; }
+    .ghp-haunted i:nth-child(#{$i}) { animation-delay: $i * 0.1s; }
 }
 
 @keyframes text-shadow {
