--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 .ghp-hide { display: none }
 
-.ghp-haunted {
+.ghp-haunted i {
     animation: text-shadow 1.5s ease-in-out infinite;
     font-weight: 900;
     line-height: 1;
